Fix reference to BodyRenderer.cs

--- a/samples/GalleryApp/GalleryApp.csproj
+++ b/samples/GalleryApp/GalleryApp.csproj
@@ -127,10 +127,12 @@
     <Compile Include="..\Common\cs\MediaPlayerFrameSource.cs">
       <Link>FrameSource\MediaPlayerFrameSource.cs</Link>
     </Compile>
+    <Compile Include="..\SkeletalDetector\cs\SkeletalDetectorSample_UWP\BodyRenderer.cs">
+      <Link>BodyRenderer.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="BodyRenderer.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
