--- a/samples/GalleryApp/GalleryApp.csproj
+++ b/samples/GalleryApp/GalleryApp.csproj
@@ -191,10 +191,7 @@
       <Version>1.1.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pages\" />
-    <Folder Include="SampleImages\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="GalleryAppClassDiagram.cd" />
   </ItemGroup>
