--- a/samples/SentimentAnalyzerCustomSkill/cpp/Skill/FaceSentimentAnalyzer/packages.config
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/Skill/FaceSentimentAnalyzer/packages.config
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.5.2.15" targetFramework="native" />
-  <package id="Microsoft.AI.Skills.SkillInterfacePreview.DXCoreExtension" version="0.0.1.2-pre" targetFramework="native" />
-  <package id="Microsoft.Windows.CppWinRT" version="2.0.190506.1" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.SkillInterfacePreview.DXCoreExtension" version="0.0.1.3-pre" targetFramework="native" />
+  <package id="Microsoft.Windows.CppWinRT" version="2.0.190620.2" targetFramework="native" />
 </packages>
