--- a/samples/GalleryApp/GalleryApp.csproj
+++ b/samples/GalleryApp/GalleryApp.csproj
@@ -128,7 +128,7 @@
       <Link>FrameSource\MediaPlayerFrameSource.cs</Link>
     </Compile>
     <Compile Include="..\ObjectDetector\cs\ObjectDetectorSample_UWP\BoundingBoxRenderer.cs">
-      <Link>BoundingBoxRenderer.cs</Link>
+      <Link>Pages\ObjectDetector\BoundingBoxRenderer.cs</Link>
     </Compile>
     <Compile Include="..\SkeletalDetector\cs\SkeletalDetectorSample_UWP\BodyRenderer.cs">
       <Link>BodyRenderer.cs</Link>
@@ -141,7 +141,7 @@
     </Compile>
     <Compile Include="Models\Skill.cs" />
     <Compile Include="Models\SkillCategory.cs" />
-    <Compile Include="Pages\ObjectDetectorPage.xaml.cs">
+    <Compile Include="Pages\ObjectDetector\ObjectDetectorPage.xaml.cs">
       <DependentUpon>ObjectDetectorPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -177,7 +177,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Pages\ObjectDetectorPage.xaml">
+    <Page Include="Pages\ObjectDetector\ObjectDetectorPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -213,7 +213,9 @@
       <Version>1.1.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Pages\SkeletalDetector\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="GalleryAppClassDiagram.cd" />
     <Content Include="Pages\Skills.json">
