--- a/samples/GalleryApp/GalleryApp.csproj
+++ b/samples/GalleryApp/GalleryApp.csproj
@@ -131,7 +131,7 @@
       <Link>Pages\ObjectDetector\BoundingBoxRenderer.cs</Link>
     </Compile>
     <Compile Include="..\SkeletalDetector\cs\SkeletalDetectorSample_UWP\BodyRenderer.cs">
-      <Link>BodyRenderer.cs</Link>
+      <Link>Pages\SkeletalDetector\BodyRenderer.cs</Link>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -145,12 +145,13 @@
       <DependentUpon>ObjectDetectorPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Pages\SkeletalDetectorPage.xaml.cs">
+    <Compile Include="Pages\SkeletalDetector\SkeletalDetectorPage.xaml.cs">
       <DependentUpon>SkeletalDetectorPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Thumbnail.xaml.cs">
       <DependentUpon>Thumbnail.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UIHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -181,7 +182,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\SkeletalDetectorPage.xaml">
+    <Page Include="Pages\SkeletalDetector\SkeletalDetectorPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -213,9 +214,7 @@
       <Version>1.1.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pages\SkeletalDetector\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="GalleryAppClassDiagram.cd" />
     <Content Include="Pages\Skills.json">
