- update SkeletalDetector sample to use latest nuget available that fixes a regression in RS5 - use the input image descriptor to select an optimal image source format from the camera - use a set of helper methods to convert skill descriptor content to string - correct typos

--- a/samples/ObjectDetector/cs/ObjectDetectorSample_UWP/ObjectDetectorSample_UWP.csproj
+++ b/samples/ObjectDetector/cs/ObjectDetectorSample_UWP/ObjectDetectorSample_UWP.csproj
@@ -57,6 +57,9 @@
     <Compile Include="..\..\..\Common\cs\MediaPlayerFrameSource.cs">
       <Link>FrameSource\MediaPlayerFrameSource.cs</Link>
     </Compile>
+    <Compile Include="..\..\..\Common\cs\SkillHelper.cs">
+      <Link>SkillHelper.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
