ConceptTagger UWP sample

--- a/samples/ConceptTagger/cs/ConceptTaggerSample_UWP/ConceptTaggerSample_UWP.csproj
+++ b/samples/ConceptTagger/cs/ConceptTaggerSample_UWP/ConceptTaggerSample_UWP.csproj
@@ -109,6 +109,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultItemUserControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
